--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://risenix.io/og.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%94%A5%3C/text%3E%3C/svg%3E" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
 
     <style>
         :root {
@@ -48,11 +48,10 @@
         .wrap { max-width: 1120px; margin: 0 auto; padding: 0 20px; }
 
         header { position: sticky; top: 0; z-index: 20; backdrop-filter: saturate(120%) blur(8px); background: rgba(11,16,32,0.6); border-bottom: 1px solid rgba(255,255,255,0.06); }
-        .nav { display:flex; align-items:center; justify-content:space-between; padding: 14px 0; }
-        .brand { display:flex; align-items:center; gap:12px; font-weight:700; letter-spacing:0.2px; }
-        .logo { width:34px; height:34px; border-radius:10px; background: conic-gradient(from 210deg, #ffb680, #ff7a45 40%, #ff3d2e 70%, #ffb680); box-shadow: 0 0 0 1px rgba(255,255,255,0.08) inset, 0 8px 28px rgba(255,122,69,0.35); position: relative; }
-        .logo:before { content:""; position:absolute; inset:4px; border-radius:8px; background: radial-gradient(60% 60% at 40% 35%, rgba(255,255,255,0.55), rgba(255,255,255,0) 60%); opacity:.7; }
-        .brand span { font-size: 18px; }
+        .nav { display:flex; align-items:center; justify-content:space-between; padding: 14px 0; gap: 20px; }
+        .brand { display: flex; align-items: center;}
+        .logo { width:60px; height:60px; display: block; transform: translateY(-2px);}
+        .brand span{ font-size: 1.6rem; font-weight: 600; line-height:1;}
         .menu { display:flex; gap:20px; align-items:center; }
         .menu a { color: var(--muted); font-weight:500; }
         .cta { display:inline-block; background: var(--accent); color:#1a0f0a; font-weight:700; padding:10px 14px; border-radius:12px; box-shadow: 0 8px 24px rgba(255,122,69,0.35); }
@@ -107,7 +106,7 @@
 <header>
     <div class="wrap nav">
         <a class="brand" href="#top">
-            <span class="logo" aria-hidden="true"></span>
+            <img src="logo.svg" alt="Risenix" class="logo" />
             <span>Risenix</span>
         </a>
         <nav class="menu" aria-label="Primary">
