Add robots and sitemap

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Risenix — Order from chaos. Growth from precision.</title>
     <meta name="description" content="Risenix is an engineering partner focused on reliability, DevOps/SRE, cloud scalability, and thoughtful software development. Order from chaos. Growth from precision." />
+    <meta name="keywords" content="risenix, devops, sre, site reliability engineering, cloud engineering, kubernetes, aws, gcp, azure, infrastructure automation, ci/cd, observability, cloud architecture, reliability engineering, devops consulting, sre consulting" />
+    <meta name="author" content="Risenix" />
     <meta name="theme-color" content="#0b1020" />
+
+    <link rel="canonical" href="https://risenix.io/" />
 
     <!-- Open Graph / Twitter -->
     <meta property="og:title" content="Risenix — Order from chaos. Growth from precision." />
@@ -16,6 +20,27 @@
     <meta name="twitter:card" content="summary_large_image" />
 
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Risenix",
+      "url": "https://risenix.io",
+      "logo": "https://risenix.io/logo.svg",
+      "description": "Reliability-first engineering partner specializing in DevOps, SRE, cloud architecture, and software development",
+      "email": "hello@risenix.io",
+      "sameAs": [],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "email": "hello@risenix.io",
+        "contactType": "Customer Service"
+      },
+      "areaServed": "Worldwide",
+      "serviceType": ["DevOps", "SRE", "Cloud Architecture", "Software Engineering", "Infrastructure Automation"]
+    }
+    </script>
 
     <style>
         :root {
