--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Risenix — Order from chaos. Growth from precision.</title>
-    <meta name="description" content="Risenix is an engineering partner focused on reliability, DevOps/SRE, cloud scalability, and thoughtful software development. Order from chaos. Growth from precision." />
-    <meta name="keywords" content="risenix, devops, sre, site reliability engineering, cloud engineering, kubernetes, aws, gcp, azure, infrastructure automation, ci/cd, observability, cloud architecture, reliability engineering, devops consulting, sre consulting" />
+    <meta name="description" content="DevOps & SRE for critical infrastructure. Kubernetes (GKE/EKS), compliance (HIPAA, SOC2, PCI-DSS), GitOps. Healthcare, fintech, government systems." />
+    <meta name="keywords" content="risenix, devops, sre, site reliability engineering, cloud engineering, kubernetes, gke, eks, aws, gcp, azure, infrastructure automation, ci/cd, observability, cloud architecture, reliability engineering, devops consulting, sre consulting, hipaa compliance, soc2, pci-dss, gitops, argocd, terraform, karpenter, healthcare devops, fintech infrastructure" />
     <meta name="author" content="Risenix" />
     <meta name="theme-color" content="#0b1020" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
@@ -14,7 +14,7 @@
 
     <!-- Open Graph / Twitter -->
     <meta property="og:title" content="Risenix — Order from chaos. Growth from precision." />
-    <meta property="og:description" content="Reliability-first engineering. DevOps/SRE • Cloud • Software Development." />
+    <meta property="og:description" content="DevOps & SRE for critical infrastructure. Kubernetes (GKE/EKS), compliance (HIPAA, SOC2, PCI-DSS), GitOps. Healthcare, fintech, government systems." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://risenix.io/" />
     <meta property="og:image" content="https://risenix.io/og.png" />
@@ -30,7 +30,7 @@
       "name": "Risenix",
       "url": "https://risenix.io",
       "logo": "https://risenix.io/logo.svg",
-      "description": "Reliability-first engineering partner specializing in DevOps, SRE, cloud architecture, and software development",
+      "description": "DevOps and SRE engineering partner specializing in critical infrastructure for healthcare, fintech, and government systems. Kubernetes (GKE/EKS), compliance (HIPAA, SOC2, PCI-DSS), GitOps, and high-availability architecture.",
       "email": "hello@risenix.io",
       "sameAs": [],
       "contactPoint": {
@@ -39,7 +39,7 @@
         "contactType": "Customer Service"
       },
       "areaServed": "Worldwide",
-      "serviceType": ["DevOps", "SRE", "Cloud Architecture", "Software Engineering", "Infrastructure Automation"]
+      "serviceType": ["DevOps", "SRE", "Cloud Architecture", "Software Engineering", "Infrastructure Automation", "HIPAA Compliance", "SOC2 Compliance", "PCI-DSS Compliance", "Kubernetes Consulting", "GitOps"]
     }
     </script>
 
@@ -78,8 +78,9 @@
         .brand { display: flex; align-items: center;}
         .logo { width:60px; height:60px; display: block; transform: translateY(-2px);}
         .brand span{ font-size: 1.6rem; font-weight: 600; line-height:1;}
-        .menu { display:flex; gap:20px; align-items:center; }
+        .menu { display:flex; gap:20px; align-items:center; flex-wrap:wrap; }
         .menu a { color: var(--muted); font-weight:500; }
+        @media (max-width: 720px) { .menu { gap:12px; font-size:14px; } }
         .cta { display:inline-block; background: var(--accent); color:#1a0f0a; font-weight:700; padding:10px 14px; border-radius:12px; box-shadow: 0 8px 24px rgba(255,122,69,0.35); }
         .cta:hover{ text-decoration:none; filter: brightness(1.05); }
 
@@ -117,12 +118,21 @@
         .value { grid-column: span 12; border-left: 3px solid var(--accent); padding: 10px 12px; background: rgba(255,122,69,0.04); border-radius: 10px; }
         @media (min-width: 720px) { .value { grid-column: span 6; } }
 
+        /* Technologies */
+        .tech-grid { display:grid; gap:20px; grid-template-columns: repeat(12, 1fr); margin-top: 20px; }
+        .tech-category { grid-column: span 12; background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); border: 1px solid rgba(255,255,255,0.06); border-radius: 12px; padding: 16px; }
+        @media (min-width: 720px) { .tech-category { grid-column: span 6; } }
+        @media (min-width: 1024px) { .tech-category { grid-column: span 4; } }
+        .tech-category h3 { margin: 0 0 10px; font-size: 16px; color: var(--accent-2); }
+        .tech-tags { color: var(--muted); font-size: 14px; line-height: 1.6; }
+
         /* Contact */
         .contact { text-align:center; }
         .contact .mail { display:inline-flex; align-items:center; gap:10px; padding: 12px 16px; border-radius: 14px; background: var(--card); border:1px solid rgba(255,255,255,0.08); font-weight:700; }
         .contact small { display:block; color: var(--muted); margin-top:10px; }
 
-        footer { padding: 30px 0 60px; color: var(--muted); text-align:center; border-top:1px solid rgba(255,255,255,0.06); margin-top:40px; }
+        footer { padding: 30px 0 60px; color: var(--muted); border-top:1px solid rgba(255,255,255,0.06); margin-top:40px; }
+        footer nav a:hover { color: var(--accent); text-decoration: none; }
 
         /* Utility */
         .sr-only { position: absolute !important; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0; }
@@ -137,6 +147,8 @@
         </a>
         <nav class="menu" aria-label="Primary">
             <a href="#services">Services</a>
+            <a href="#technologies">Technologies</a>
+            <a href="#industries">Industries</a>
             <a href="#approach">Approach</a>
             <a href="#principles">Principles</a>
             <a class="cta" href="#contact">Work with us</a>
@@ -146,14 +158,16 @@
 
 <main id="top">
     <section class="hero wrap">
-        <div class="eyebrow">DevOps • SRE • Cloud • Software Engineering</div>
+        <div class="eyebrow">DevOps • SRE • Cloud • Compliance-Ready Infrastructure</div>
         <h1>Order from chaos. <br/>Growth from precision.</h1>
-        <p class="sub">Risenix is a reliability‑first engineering partner. We stabilize critical systems, automate delivery, and build software that scales—so your business can move with confidence.</p>
+        <p class="sub">Risenix is a reliability‑first engineering partner. We build and operate critical infrastructure for healthcare, fintech, and government systems. Compliance-ready, battle-tested, and built to scale.</p>
         <div class="badges">
+            <span class="badge">HIPAA Ready</span>
+            <span class="badge">PCI-DSS</span>
+            <span class="badge">SOC2</span>
+            <span class="badge">GitOps</span>
+            <span class="badge">Kubernetes</span>
             <span class="badge">High availability</span>
-            <span class="badge">Cloud architecture</span>
-            <span class="badge">CI/CD & IaC</span>
-            <span class="badge">Observability</span>
         </div>
         <div class="hero-actions">
             <a class="cta" href="#contact">Start a project</a>
@@ -168,17 +182,75 @@
             <article class="card">
                 <div class="icon" aria-hidden="true">🛡️</div>
                 <h3>DevOps & SRE</h3>
-                <p>Incident‑resistant systems, automated deployments, cost‑aware reliability. We design SLIs/SLOs, harden pipelines, and reduce toil.</p>
+                <p>GitOps workflows (ArgoCD), custom Kubernetes operators, SDLC automation with security scanning, secrets management, and multi-cluster orchestration. We design SLIs/SLOs, harden pipelines, and reduce toil.</p>
             </article>
             <article class="card">
                 <div class="icon" aria-hidden="true">☁️</div>
                 <h3>Cloud & Scale</h3>
-                <p>Secure, scalable architecture on AWS/GCP/Azure. Kubernetes, autoscaling, networking, and data platforms built for growth.</p>
+                <p>GKE and EKS with Karpenter autoscaling, custom Terraform modules, multi-account AWS Organizations, cross-region networking, and compliance-ready infrastructure (HIPAA, SOC2, PCI-DSS).</p>
             </article>
             <article class="card">
                 <div class="icon" aria-hidden="true">🧩</div>
                 <h3>Software Engineering</h3>
-                <p>Services and platforms that are simple to operate. From APIs to internal tools—measured, maintainable, and well‑observed.</p>
+                <p>Platform engineering, API design, microservices, database infrastructure (Oracle, PostgreSQL), and legacy system modernization. Services that are simple to operate, measured, maintainable, and well-observed.</p>
+            </article>
+        </div>
+    </section>
+
+    <section id="technologies" class="section wrap">
+        <h2>Technologies We Work With</h2>
+        <p class="lead">Deep expertise across the modern DevOps and cloud stack, from infrastructure to compliance.</p>
+        <div class="tech-grid">
+            <div class="tech-category">
+                <h3>Infrastructure & Orchestration</h3>
+                <div class="tech-tags">Kubernetes (GKE, EKS, custom operators, Karpenter), Terraform (custom modules, multi-cloud), Helm, GitOps (ArgoCD), VMware, virtualization</div>
+            </div>
+            <div class="tech-category">
+                <h3>Cloud Platforms</h3>
+                <div class="tech-tags">Google Cloud Platform (GKE, networking, IAM), AWS (EKS, Organizations, multi-account), Azure</div>
+            </div>
+            <div class="tech-category">
+                <h3>CI/CD & Automation</h3>
+                <div class="tech-tags">GitHub Actions, GitLab CI/CD, Jenkins, Bitbucket Pipelines, CircleCI, TeamCity, security scanning automation, SDLC pipeline design</div>
+            </div>
+            <div class="tech-category">
+                <h3>Databases & Data</h3>
+                <div class="tech-tags">Oracle, PostgreSQL, MySQL, database clustering, high availability, data platform architecture</div>
+            </div>
+            <div class="tech-category">
+                <h3>Networking & Security</h3>
+                <div class="tech-tags">Core networking, routing, site-to-site VPNs, firewall configuration, multi-region connectivity, compliance implementation (HIPAA, SOC2, PCI-DSS)</div>
+            </div>
+            <div class="tech-category">
+                <h3>Monitoring & Observability</h3>
+                <div class="tech-tags">Prometheus, Grafana, ELK stack, centralized logging, infrastructure monitoring, Datadog</div>
+            </div>
+        </div>
+    </section>
+
+    <section id="industries" class="section wrap">
+        <h2>Industries We Serve</h2>
+        <p class="lead">We specialize in critical infrastructure where reliability, security, and compliance are non-negotiable.</p>
+        <div class="grid">
+            <article class="card">
+                <div class="icon" aria-hidden="true">💳</div>
+                <h3>Financial Services & Fintech</h3>
+                <p>PCI-DSS compliant infrastructure, high-availability payment systems, secure multi-region deployments, and financial data protection.</p>
+            </article>
+            <article class="card">
+                <div class="icon" aria-hidden="true">🏥</div>
+                <h3>Healthcare & Life Sciences</h3>
+                <p>HIPAA-compliant cloud infrastructure, pharma manufacturing systems, AI/ML healthcare platforms, secure data handling, and compliance automation.</p>
+            </article>
+            <article class="card">
+                <div class="icon" aria-hidden="true">🏛️</div>
+                <h3>Government & Critical Infrastructure</h3>
+                <p>High-availability systems, secure networking and routing, database clusters and virtualization, multi-site connectivity, and mission-critical operations.</p>
+            </article>
+            <article class="card">
+                <div class="icon" aria-hidden="true">☁️</div>
+                <h3>SaaS & Technology</h3>
+                <p>Kubernetes at scale (GKE, EKS), multi-tenant architectures, cost optimization, and high-growth platform engineering.</p>
             </article>
         </div>
     </section>
@@ -187,10 +259,10 @@
         <h2>How we work</h2>
         <p class="lead">Calm, disciplined execution. We cut through noise, focus on outcomes, and leave teams stronger than we found them.</p>
         <div class="process">
-            <div class="step"><b>01 • Assess</b>Map risks, metrics, and constraints. Align on goals & success measures.</div>
-            <div class="step"><b>02 • Stabilize</b>Close reliability gaps, automate the critical path, remove toil.</div>
-            <div class="step"><b>03 • Scale</b>Design for growth: architecture, performance, cost, and security.</div>
-            <div class="step"><b>04 • Evolve</b>Enable teams: docs, runbooks, dashboards, and continuous improvement.</div>
+            <div class="step"><b>01 • Assess</b>Infrastructure and compliance gap analysis, performance and cost baseline, risk assessment for critical systems, architecture review.</div>
+            <div class="step"><b>02 • Stabilize</b>Implement monitoring and alerting, security automation and scanning, secrets management, incident response procedures, compliance controls implementation.</div>
+            <div class="step"><b>03 • Scale</b>Kubernetes at scale (GKE/EKS with Karpenter), multi-account/multi-region architecture, custom Terraform modules, cost optimization, high-availability design.</div>
+            <div class="step"><b>04 • Evolve</b>GitOps workflows (ArgoCD), documentation and runbooks, team enablement and knowledge transfer, continuous improvement practices.</div>
         </div>
     </section>
 
@@ -216,7 +288,18 @@
 </main>
 
 <footer>
-    <div class="wrap">© <span id="y"></span> Risenix. All rights reserved.</div>
+    <div class="wrap">
+        <div style="display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:20px; margin-bottom:20px;">
+            <div>© <span id="y"></span> Risenix. All rights reserved.</div>
+            <!-- Future links can be added here:
+            <nav style="display:flex; gap:20px;">
+                <a href="/blog" style="color:var(--muted);">Blog</a>
+                <a href="/resources" style="color:var(--muted);">Resources</a>
+                <a href="/case-studies" style="color:var(--muted);">Case Studies</a>
+            </nav>
+            -->
+        </div>
+    </div>
 </footer>
 
 <script>
