--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="DevOps & SRE for critical infrastructure. Kubernetes (GKE/EKS), compliance (HIPAA, SOC2, PCI-DSS), GitOps. Healthcare, fintech, government systems." />
     <meta name="keywords" content="risenix, devops, sre, site reliability engineering, cloud engineering, kubernetes, gke, eks, aws, gcp, azure, infrastructure automation, ci/cd, observability, cloud architecture, reliability engineering, devops consulting, sre consulting, hipaa compliance, soc2, pci-dss, gitops, argocd, terraform, karpenter, healthcare devops, fintech infrastructure" />
     <meta name="author" content="Risenix" />
-    <meta name="theme-color" content="#0b1020" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
 
     <link rel="canonical" href="https://risenix.io/" />
@@ -20,12 +20,6 @@
     <meta property="og:image" content="https://risenix.io/og.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
-    <!-- Favicons -->
-    <link rel="icon" type="image/svg+xml" href="logo.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="logo.svg" />
-    <link rel="shortcut icon" href="favicon-32x32.png" />
 
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
@@ -34,7 +28,7 @@
       "@type": "Organization",
       "name": "Risenix",
       "url": "https://risenix.io",
-      "logo": "https://risenix.io/logo.svg",
+      "logo": "https://risenix.io/logo.png",
       "description": "DevOps and SRE engineering partner specializing in critical infrastructure for healthcare, fintech, and government systems. Kubernetes (GKE/EKS), compliance (HIPAA, SOC2, PCI-DSS), GitOps, and high-availability architecture.",
       "email": "hello@risenix.io",
       "sameAs": [],
@@ -50,15 +44,21 @@
 
     <style>
         :root {
-            --bg: #0b1020;
-            --bg-2: #121932;
-            --text: #e8ecf8;
-            --muted: #b9c1d9;
-            --accent: #ff7a45; /* ember */
-            --accent-2: #ffd8c7;
-            --card: #131a34;
-            --ok: #3ddc84;
-            --warn: #ffb020;
+            --bg: #ffffff;
+            --bg-2: #f8f9fa;
+            --text: #1a1f26;
+            --muted: #6b7280;
+            /* Professional enterprise colors - blue gradient theme */
+            --accent: #2563eb; /* Darker blue for better contrast on white */
+            --accent-light: #3b82f6;
+            --accent-dark: #1e40af;
+            --accent-2: #06b6d4; /* Tech cyan */
+            /* Blue for CTAs (matching logo theme) */
+            --cta: #2563eb;
+            --cta-light: #3b82f6;
+            --card: #ffffff;
+            --ok: #10b981;
+            --warn: #f59e0b;
         }
         * { box-sizing: border-box; }
         html { scroll-behavior: smooth; }
@@ -67,15 +67,14 @@
         body {
             font-family: system-ui, -apple-system, Segoe UI, Roboto, Inter, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
             color: var(--text);
-            background: radial-gradient(1200px 600px at 80% -10%, rgba(255,122,69,0.18), rgba(255,122,69,0) 60%),
-            radial-gradient(900px 500px at -10% -20%, rgba(54,88,226,0.18), rgba(54,88,226,0) 55%),
-            linear-gradient(180deg, var(--bg), var(--bg-2));
+            /* Clean white background */
+            background: var(--bg);
             line-height: 1.55;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
         }
         a { color: var(--accent); text-decoration: none; }
-        a:hover { text-decoration: underline; }
+        a:hover { color: var(--accent-light); text-decoration: underline; }
 
         /* Layout */
         main { padding-top: 73px; }
@@ -88,8 +87,8 @@
             right: 0 !important;
             z-index: 10000 !important; 
             backdrop-filter: saturate(120%) blur(8px); 
-            background: rgba(11,16,32,0.6) !important; 
-            border-bottom: 1px solid rgba(255,255,255,0.06); 
+            background: rgba(255,255,255,0.95) !important; 
+            border-bottom: 1px solid rgba(0,0,0,0.08); 
             width: 100% !important;
             display: block !important;
             visibility: visible !important;
@@ -107,9 +106,9 @@
             width: 100% !important;
             visibility: visible !important;
         }
-        .brand { display: flex; align-items: center;}
-        .logo { width:60px; height:60px; display: block; transform: translateY(-2px);}
-        .brand span{ font-size: 1.6rem; font-weight: 600; line-height:1;}
+        .brand { display: flex; align-items: center; color: var(--text); }
+        .logo { width:60px; height:60px; display: block; transform: translateY(-2px); object-fit: contain; }
+        .brand span{ font-size: 1.6rem; font-weight: 600; line-height:1; color: var(--text); }
         .menu { 
             display:flex; 
             gap:20px; 
@@ -131,11 +130,12 @@
             }
         }
         .menu a { color: var(--muted); font-weight:500; }
-        .cta { display:inline-block; background: var(--accent); color:#1a0f0a; font-weight:700; padding:10px 14px; border-radius:12px; box-shadow: 0 8px 24px rgba(255,122,69,0.35); }
-        .cta:hover{ text-decoration:none; filter: brightness(1.05); }
+        .cta { display:inline-block; background: var(--accent); color: white !important; font-weight:700; padding:10px 14px; border-radius:12px; box-shadow: 0 4px 16px rgba(37,99,235,0.3); transition: all 0.2s ease; }
+        .cta:hover{ text-decoration:none; background: var(--accent-light); color: white !important; transform: translateY(-1px); box-shadow: 0 6px 20px rgba(37,99,235,0.4); }
 
         /* Mobile Menu */
         .menu-toggle { display:none; background:none; border:none; color:var(--text); cursor:pointer; padding:8px; font-size:24px; z-index:1001; position:relative; }
+        .menu-toggle:hover { opacity:0.7; }
         .menu-toggle:focus { outline:none; }
         
         @media (max-width: 900px) {
@@ -154,9 +154,9 @@
                 width:100vw !important;
                 max-width:100vw !important;
                 z-index:1000;
-                background:rgba(11,16,32,0.98);
+                background:rgba(255,255,255,0.98);
                 backdrop-filter:saturate(120%) blur(12px);
-                border-bottom:1px solid rgba(255,255,255,0.06);
+                border-bottom:1px solid rgba(0,0,0,0.08);
                 flex-direction:column;
                 align-items:stretch;
                 justify-content:flex-start;
@@ -164,7 +164,7 @@
                 gap:0;
                 max-height:calc(100vh - 73px);
                 overflow-y:auto;
-                box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+                box-shadow: 0 4px 20px rgba(0,0,0,0.1);
                 margin:0 !important;
                 transform:none !important;
             }
@@ -173,27 +173,28 @@
             }
             .menu a { 
                 padding:12px 0;
-                border-bottom:1px solid rgba(255,255,255,0.06);
+                border-bottom:1px solid rgba(0,0,0,0.06);
                 width:100%;
             }
             .menu a:last-child { border-bottom:none; }
             .menu .cta { 
                 margin-top:8px;
                 text-align:center;
+                color: white !important;
             }
         }
 
         /* Hero */
         .hero { padding: 80px 0 40px; text-align:center; }
-        .eyebrow { color: var(--accent-2); font-weight:600; letter-spacing: .08em; text-transform: uppercase; font-size:12px; }
+        .eyebrow { color: var(--accent); font-weight:600; letter-spacing: .08em; text-transform: uppercase; font-size:12px; }
         h1 { font-size: clamp(32px, 5vw, 56px); margin: 12px 0 14px; line-height: 1.1; }
         .sub { max-width: 820px; margin: 0 auto 22px; color: var(--muted); font-size: 18px; }
         .badges { display:flex; gap:10px; justify-content:center; flex-wrap:wrap; margin: 10px 0 28px; }
-        .badge { border:1px solid rgba(255,255,255,0.12); color: var(--muted); padding:8px 12px; border-radius:999px; font-size:14px; background: rgba(255,255,255,0.04); }
+        .badge { border:1px solid rgba(37,99,235,0.3); color: var(--accent); padding:8px 12px; border-radius:999px; font-size:14px; background: rgba(37,99,235,0.1); font-weight:500; }
 
         .hero-actions { display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top: 10px; }
-        .btn-outline { border:1px solid rgba(255,255,255,0.18); padding:10px 14px; border-radius:12px; color: var(--text); }
-        .btn-outline:hover { background: rgba(255,255,255,0.06); text-decoration:none; }
+        .btn-outline { border:1px solid rgba(0,0,0,0.18); padding:10px 14px; border-radius:12px; color: var(--text); }
+        .btn-outline:hover { background: rgba(0,0,0,0.04); text-decoration:none; }
 
         /* Cards */
         .section { padding: 60px 0; position:relative; z-index:1; }
@@ -202,36 +203,37 @@
         .section .lead { text-align:center; color: var(--muted); margin: 0 auto 34px; max-width: 760px; }
 
         .grid { display:grid; gap:16px; grid-template-columns: repeat(12, 1fr); }
-        .card { grid-column: span 12; background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.015)); border: 1px solid rgba(255,255,255,0.08); border-radius: 16px; padding: 18px; }
+        .card { grid-column: span 12; background: var(--card); border: 1px solid rgba(0,0,0,0.08); border-radius: 12px; padding: 24px; transition: all 0.2s ease; box-shadow: 0 1px 3px rgba(0,0,0,0.05); }
+        .card:hover { border-color: rgba(37,99,235,0.3); box-shadow: 0 4px 16px rgba(37,99,235,0.15); }
         @media (min-width: 720px) { .card { grid-column: span 4; } }
         .card h3 { margin: 4px 0 6px; font-size: 20px; }
         .card p { color: var(--muted); margin: 0; }
-        .card .icon { width:36px; height:36px; border-radius:10px; display:grid; place-items:center; background:#101735; margin-bottom:10px; box-shadow: inset 0 0 0 1px rgba(255,255,255,0.06); }
+        .card .icon { width:36px; height:36px; border-radius:10px; display:grid; place-items:center; background:rgba(37,99,235,0.1); margin-bottom:10px; box-shadow: inset 0 0 0 1px rgba(37,99,235,0.1); }
 
         /* Process */
         .process { display:grid; gap:12px; grid-template-columns: repeat(4, 1fr); margin-top: 18px; }
-        .step { background: rgba(255,255,255,0.04); border:1px solid rgba(255,255,255,0.08); padding:14px; border-radius:12px; text-align:center; }
-        .step b { display:block; font-size:14px; margin-bottom:6px; color: var(--accent-2); letter-spacing:.06em; }
+        .step { background: rgba(37,99,235,0.05); border:1px solid rgba(37,99,235,0.15); padding:14px; border-radius:12px; text-align:center; }
+        .step b { display:block; font-size:14px; margin-bottom:6px; color: var(--accent); letter-spacing:.06em; }
 
         /* Values */
         .values { display:grid; gap:16px; grid-template-columns: repeat(12, 1fr); margin-top:10px; }
-        .value { grid-column: span 12; border-left: 3px solid var(--accent); padding: 10px 12px; background: rgba(255,122,69,0.04); border-radius: 10px; }
+        .value { grid-column: span 12; border-left: 3px solid var(--accent); padding: 12px 16px; background: rgba(37,99,235,0.08); border-radius: 10px; }
         @media (min-width: 720px) { .value { grid-column: span 6; } }
 
         /* Technologies */
         .tech-grid { display:grid; gap:20px; grid-template-columns: repeat(12, 1fr); margin-top: 20px; }
-        .tech-category { grid-column: span 12; background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); border: 1px solid rgba(255,255,255,0.06); border-radius: 12px; padding: 16px; }
+        .tech-category { grid-column: span 12; background: var(--card); border: 1px solid rgba(0,0,0,0.08); border-radius: 12px; padding: 16px; box-shadow: 0 1px 3px rgba(0,0,0,0.05); }
         @media (min-width: 720px) { .tech-category { grid-column: span 6; } }
         @media (min-width: 1024px) { .tech-category { grid-column: span 4; } }
-        .tech-category h3 { margin: 0 0 10px; font-size: 16px; color: var(--accent-2); }
+        .tech-category h3 { margin: 0 0 10px; font-size: 16px; color: var(--accent); }
         .tech-tags { color: var(--muted); font-size: 14px; line-height: 1.6; }
 
         /* Contact */
         .contact { text-align:center; }
-        .contact .mail { display:inline-flex; align-items:center; gap:10px; padding: 12px 16px; border-radius: 14px; background: var(--card); border:1px solid rgba(255,255,255,0.08); font-weight:700; }
+        .contact .mail { display:inline-flex; align-items:center; gap:10px; padding: 12px 16px; border-radius: 14px; background: var(--bg-2); border:1px solid rgba(0,0,0,0.08); font-weight:700; }
         .contact small { display:block; color: var(--muted); margin-top:10px; }
 
-        footer { padding: 30px 0 60px; color: var(--muted); border-top:1px solid rgba(255,255,255,0.06); margin-top:40px; }
+        footer { padding: 30px 0 60px; color: var(--muted); border-top:1px solid rgba(0,0,0,0.06); margin-top:40px; }
         footer nav a:hover { color: var(--accent); text-decoration: none; }
 
         /* Utility */
@@ -242,7 +244,7 @@
 <header>
     <div class="wrap nav">
         <a class="brand" href="#top">
-            <img src="logo.svg" alt="Risenix" class="logo" />
+            <img src="logo.png" alt="Risenix" class="logo" />
             <span>Risenix</span>
         </a>
         <button class="menu-toggle" aria-label="Toggle menu" aria-expanded="false">☰</button>
@@ -252,6 +254,7 @@
             <a href="#industries">Industries</a>
             <a href="#approach">Approach</a>
             <a href="#principles">Principles</a>
+            <a href="#trust">Why Trust Us</a>
             <a class="cta" href="#contact">Work with us</a>
         </nav>
     </div>
@@ -378,13 +381,35 @@
         </div>
     </section>
 
+    <section id="trust" class="section wrap">
+        <h2>Why Trust Risenix</h2>
+        <p class="lead">Enterprise-grade reliability and compliance expertise for critical infrastructure.</p>
+        <div class="grid" style="margin-top: 30px;">
+            <article class="card">
+                <div class="icon" aria-hidden="true">🔒</div>
+                <h3>Compliance Expertise</h3>
+                <p>Proven track record implementing HIPAA, SOC2, and PCI-DSS compliant infrastructure for healthcare, fintech, and government systems.</p>
+            </article>
+            <article class="card">
+                <div class="icon" aria-hidden="true">⚡</div>
+                <h3>Battle-Tested</h3>
+                <p>Experience across 100+ production systems, from critical government infrastructure to high-scale healthcare platforms.</p>
+            </article>
+            <article class="card">
+                <div class="icon" aria-hidden="true">🎯</div>
+                <h3>Reliability First</h3>
+                <p>We engineer for failure and recovery. Uptime is a product feature, not an afterthought.</p>
+            </article>
+        </div>
+    </section>
+
     <section id="contact" class="section wrap contact">
-        <h2>Let’s talk</h2>
-        <p class="lead">Tell us where things hurt—or where you want to go next. We’ll bring calm, clarity, and momentum.</p>
+        <h2>Let's talk</h2>
+        <p class="lead">Tell us where things hurt—or where you want to go next. We'll bring calm, clarity, and momentum.</p>
         <a class="mail" href="mailto:hello@risenix.io" aria-label="Email hello at risenix dot io">
             ✉️ hello@risenix.io
         </a>
-        <small>Prefer Telegram/WhatsApp? Add a note in your email and we’ll follow up.</small>
+        <small>Prefer Telegram/WhatsApp? Add a note in your email and we'll follow up.</small>
     </section>
 </main>
 
