--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <meta property="og:image" content="https://risenix.io/og.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="manifest" href="site.webmanifest" />
 
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
