--- a/index.html
+++ b/index.html
@@ -15,10 +15,19 @@
     <!-- Open Graph / Twitter -->
     <meta property="og:title" content="Risenix — Order from chaos. Growth from precision." />
     <meta property="og:description" content="DevOps & SRE for critical infrastructure. Kubernetes (GKE/EKS), compliance (HIPAA, SOC2, PCI-DSS), GitOps. Healthcare, fintech, government systems." />
+    <meta property="og:site_name" content="Risenix" />
+    <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://risenix.io/" />
     <meta property="og:image" content="https://risenix.io/og.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Risenix — Order from chaos. Growth from precision." />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Risenix — Order from chaos. Growth from precision." />
+    <meta name="twitter:description" content="DevOps & SRE for critical infrastructure. Kubernetes (GKE/EKS), compliance (HIPAA, SOC2, PCI-DSS), GitOps. Healthcare, fintech, government systems." />
+    <meta name="twitter:image" content="https://risenix.io/og.png" />
+    <meta name="twitter:url" content="https://risenix.io/" />
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
@@ -32,9 +41,11 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
+      "@id": "https://risenix.io/#org",
       "name": "Risenix",
       "url": "https://risenix.io",
       "logo": "https://risenix.io/logo.png",
+      "image": "https://risenix.io/og.png",
       "description": "DevOps and SRE engineering partner specializing in critical infrastructure for healthcare, fintech, and government systems. Kubernetes (GKE/EKS), compliance (HIPAA, SOC2, PCI-DSS), GitOps, and high-availability architecture.",
       "email": "hello@risenix.io",
       "sameAs": [],
