--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
         .hero { padding: 80px 0 40px; text-align:center; }
         .eyebrow { color: var(--accent); font-weight:600; letter-spacing: .08em; text-transform: uppercase; font-size:12px; }
         h1 { font-size: clamp(32px, 5vw, 56px); margin: 12px 0 14px; line-height: 1.1; }
-        .sub { max-width: 820px; margin: 0 auto 22px; color: var(--muted); font-size: 18px; }
+        .sub { max-width: 900px; margin: 0 auto 14px; color: var(--muted); font-size: 18px; }
+        .tagline { max-width: 820px; margin: 0 auto 22px; color: var(--text); font-size: 16px; font-weight: 600; letter-spacing: .01em; opacity: .85; }
         .badges { display:flex; gap:10px; justify-content:center; flex-wrap:wrap; margin: 10px 0 28px; }
         .badge { border:1px solid rgba(37,99,235,0.3); color: var(--accent); padding:8px 12px; border-radius:999px; font-size:14px; background: rgba(37,99,235,0.1); font-weight:500; }
 
@@ -280,8 +281,9 @@
 <main id="top">
     <section class="hero wrap">
         <div class="eyebrow">DevOps • SRE • Cloud • Compliance-Ready Infrastructure</div>
-        <h1>Order from chaos. <br/>Growth from precision.</h1>
-        <p class="sub">Risenix is a reliability‑first engineering partner. We build and operate critical infrastructure for healthcare, fintech, and government systems. Compliance-ready, battle-tested, and built to scale.</p>
+        <h1>Compliance-Driven SRE &amp; DevOps for Healthcare &amp; Fintech</h1>
+        <p class="sub">We identify and fix your reliability &amp; compliance gaps in 2–4 weeks — then operate your infrastructure with monthly SLAs that withstand audits.</p>
+        <p class="tagline">Order from chaos. Growth from precision.</p>
         <div class="badges">
             <span class="badge">HIPAA Ready</span>
             <span class="badge">PCI-DSS</span>
