Update page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Risenix — Order from chaos. Growth from precision.</title>
+    <title>Compliance-Driven SRE &amp; DevOps for Healthcare &amp; Fintech | Risenix</title>
     <meta name="description" content="DevOps & SRE for critical infrastructure. Kubernetes (GKE/EKS), compliance (HIPAA, SOC2, PCI-DSS), GitOps. Healthcare, fintech, government systems." />
     <meta name="keywords" content="risenix, devops, sre, site reliability engineering, cloud engineering, kubernetes, gke, eks, aws, gcp, azure, infrastructure automation, ci/cd, observability, cloud architecture, reliability engineering, devops consulting, sre consulting, hipaa compliance, soc2, pci-dss, gitops, argocd, terraform, karpenter, healthcare devops, fintech infrastructure" />
     <meta name="author" content="Risenix" />
@@ -13,7 +13,7 @@
     <link rel="canonical" href="https://risenix.io/" />
 
     <!-- Open Graph / Twitter -->
-    <meta property="og:title" content="Risenix — Order from chaos. Growth from precision." />
+    <meta property="og:title" content="Compliance-Driven SRE &amp; DevOps for Healthcare &amp; Fintech | Risenix" />
     <meta property="og:description" content="DevOps & SRE for critical infrastructure. Kubernetes (GKE/EKS), compliance (HIPAA, SOC2, PCI-DSS), GitOps. Healthcare, fintech, government systems." />
     <meta property="og:site_name" content="Risenix" />
     <meta property="og:locale" content="en_US" />
@@ -22,9 +22,9 @@
     <meta property="og:image" content="https://risenix.io/og.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Risenix — Order from chaos. Growth from precision." />
+    <meta property="og:image:alt" content="Compliance-Driven SRE &amp; DevOps for Healthcare &amp; Fintech" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Risenix — Order from chaos. Growth from precision." />
+    <meta name="twitter:title" content="Compliance-Driven SRE &amp; DevOps for Healthcare &amp; Fintech | Risenix" />
     <meta name="twitter:description" content="DevOps & SRE for critical infrastructure. Kubernetes (GKE/EKS), compliance (HIPAA, SOC2, PCI-DSS), GitOps. Healthcare, fintech, government systems." />
     <meta name="twitter:image" content="https://risenix.io/og.png" />
     <meta name="twitter:url" content="https://risenix.io/" />
